--- a/DSirius/Views/Base.lproj/Main.storyboard
+++ b/DSirius/Views/Base.lproj/Main.storyboard
@@ -121,7 +121,7 @@
                                         <rect key="frame" x="0.0" y="114" width="414" height="198.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cAf-5G-RnK">
-                                                <rect key="frame" x="165.5" y="118.5" width="83" height="60"/>
+                                                <rect key="frame" x="166" y="118.5" width="82" height="60"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="60" id="uTM-qA-bSw"/>
                                                 </constraints>
@@ -182,7 +182,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oeN-lu-xHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1902.8985507246377" y="-359.59821428571428"/>
+            <point key="canvasLocation" x="1903" y="-356"/>
         </scene>
         <!--Chat View Controller-->
         <scene sceneID="Xqu-fT-EMv">
@@ -195,16 +195,6 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hv8-Wu-XA4">
                                 <rect key="frame" x="0.0" y="88" width="414" height="714"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableViewCell" id="IVy-Vj-e4d">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IVy-Vj-e4d" id="F3L-br-d5a">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PBx-90-Eme">
                                 <rect key="frame" x="0.0" y="802" width="414" height="60"/>
@@ -270,7 +260,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Va-DX-i7v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3189.8550724637685" y="138.61607142857142"/>
+            <point key="canvasLocation" x="3275" y="139"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="k5I-f1-NQS">
@@ -293,7 +283,7 @@
                                                     <constraint firstAttribute="height" constant="75.5" id="hu7-Wc-LMm"/>
                                                 </constraints>
                                             </imageView>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jnb-gH-WVp">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1@2.com" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jnb-gH-WVp">
                                                 <rect key="frame" x="83" y="35" width="248" height="35.5"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="248" id="ajc-Pt-Tf8"/>
@@ -319,7 +309,7 @@
                                         <rect key="frame" x="0.0" y="115.5" width="414" height="197"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GaF-at-GJx">
-                                                <rect key="frame" x="178" y="117" width="58" height="60"/>
+                                                <rect key="frame" x="176.5" y="117" width="61" height="60"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="60" id="vkO-Sg-Rfs"/>
                                                 </constraints>
@@ -334,7 +324,7 @@
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="42X-aH-tnA">
                                                 <rect key="frame" x="20" y="20" width="374" height="74"/>
                                             </imageView>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iNd-so-PSq">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="klp987mn" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iNd-so-PSq">
                                                 <rect key="frame" x="83" y="36" width="248" height="34"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="248" id="2gQ-fN-HBD"/>
@@ -381,7 +371,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Doe-mk-WA5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1902.8985507246377" y="569.86607142857144"/>
+            <point key="canvasLocation" x="1903" y="574"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gUJ-zc-ftA">
