--- a/DSirius/Views/MessageCell.xib
+++ b/DSirius/Views/MessageCell.xib
@@ -52,8 +52,10 @@
                                 </constraints>
                             </imageView>
                         </subviews>
+                        <color key="backgroundColor" name="BackgroundColor"/>
                     </stackView>
                 </subviews>
+                <color key="backgroundColor" name="BackgroundColor"/>
                 <constraints>
                     <constraint firstItem="uQe-lS-nGj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="GjF-5c-H3V"/>
                     <constraint firstAttribute="bottom" secondItem="uQe-lS-nGj" secondAttribute="bottom" constant="10" id="J2Y-rY-1PI"/>
@@ -72,6 +74,9 @@
     </objects>
     <resources>
         <image name="Me" width="133" height="133"/>
+        <namedColor name="BackgroundColor">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="BrandRed">
             <color red="0.92199999094009399" green="0.093999996781349182" blue="0.32899999618530273" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
